# roomicheck

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  uv.toml
.agents/: AGENTS.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 49a0be63cf71_protect_profile_snapshots.py  8d7c1f2a4b6e_add_holistic_profile_analysis.py  9f2a1c7d4e6b_add_adaptive_question_rounds.py  a4c7e9f21d6b_add_question_deployed_event.py  b071e92464b2_create_stage_1_questionnaire_tables.py  c82b1e4d6f90_expand_question_limit.py  d3367e937062_harden_questionnaire_persistence.py  e278c5f13a3b_secure_snapshot_trigger.py  f5b9d2e8c741_revoke_public_rls_trigger_execution.py
apps/api/app/: __init__.py  ai.py  audit.py  config.py  database.py  main.py  models.py  observability.py  prompts.py  routes.py  schemas.py  service.py
apps/api/tests/: test_stage1_api.py  test_stage2_ai.py  test_stage2_api.py  test_stage2_live.py  test_stage4_audit.py  test_supabase_connectivity.py
docs/: project-overview.md
questionnaire/: dimensions.v2.json  fallback_followups.v1.json  question_bank.v2.json  scoring_rules.v1.json  scoring_rules.v2.json  seed_questions.v1.json
roomicheck/: __init__.py  ai_provider.py  cli.py  config.py  models.py  privacy.py  questionnaire.py  scoring.py  storage.py
scripts/: run_demo.py  run_questionnaire.py  test_gemini_api_key.py  test_openai_api_key.py
tests/: test_ai_provider.py  test_privacy.py  test_questionnaire.py  test_scoring.py  test_storage.py  test_v2_controller.py  test_v2_models.py  (+1 more)
(+18 files in other folders)
