[project]
name = "roomicheck"
version = "0.1.0"
description = "CLI-first prototype for RoomiCheck questionnaire and provider verification scripts."
requires-python = ">=3.11,<3.12"
dependencies = []

[project.scripts]
roomicheck = "roomicheck.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["roomicheck"]
