[project]
name = "roomicheck-api"
version = "0.1.0"
description = "RoomiCheck Demo Day FastAPI service"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic>=1.18,<2",
  "fastapi>=0.128,<1",
  "psycopg[binary]>=3.3,<4",
  "pydantic-settings>=2.12,<3",
  "roomicheck",
  "sqlalchemy>=2.0.51,<3",
  "uvicorn[standard]>=0.40,<1",
]

[tool.uv.sources]
roomicheck = { path = "../..", editable = true }

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=9,<10",
]

[tool.pytest.ini_options]
pythonpath = ["../..", "."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
